// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/channel/ChannelModes should match snapshot - not licensed for Group 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="channel_manage"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Channel Management
        </h3>
        <div
          class="mt-2"
        >
          Choose between inviting members manually or syncing members automatically from groups.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div>
          <div
            class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
          >
            <label
              class="line-switch__label"
            >
              Public channel or private channel
            </label>
            <div
              class="line-switch__toggle"
              data-testid="allow-all-toggle"
            >
              <span
                class="Toggle Toggle--with-state-label"
              >
                <label
                  class="_switch_1hx2q_2 _switch--size-large_1hx2q_126"
                  for="allow-all-toggle"
                >
                  <span
                    class="_switch__track_1hx2q_47"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      class="_switch__input_1hx2q_12"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      role="switch"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      aria-hidden="true"
                      class="_switch__knob_1hx2q_77"
                    />
                  </span>
                </label>
                <span
                  aria-hidden="true"
                  class="Toggle__state-label"
                >
                  Public
                </span>
              </span>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-sm-10"
            >
              <div
                class="help-text-small help-text-no-padding "
              >
                Select Public for a channel any user can find and join. 
                <br />
                Select Private to require channel invitations to join. 
                <br />
                Use this switch to change this channel from public to private or from private to public.
              </div>
            </div>
          </div>
          <div
            class="section-separator"
          >
            <hr
              class="separator__hr"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelModes should match snapshot 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="channel_manage"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Channel Management
        </h3>
        <div
          class="mt-2"
        >
          Choose between inviting members manually or syncing members automatically from groups.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div>
          <div
            class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
          >
            <label
              class="line-switch__label"
            >
              Sync Group Members
            </label>
            <div
              class="line-switch__toggle"
              data-testid="syncGroupSwitch"
            >
              <label
                class="_switch_1hx2q_2 _switch--size-large_1hx2q_126"
                for="syncGroupSwitch"
              >
                <span
                  class="_switch__track_1hx2q_47"
                >
                  <input
                    aria-checked="false"
                    class="_switch__input_1hx2q_12"
                    data-testid="syncGroupSwitch-button"
                    id="syncGroupSwitch"
                    role="switch"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="_switch__knob_1hx2q_77"
                  />
                </span>
              </label>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-sm-10"
            >
              <div
                class="help-text-small help-text-no-padding "
              >
                When enabled, adding and removing users from groups will add or remove them from this channel. The only way of inviting members to this channel is by adding the groups they belong to. 
                <a
                  href="https://mattermost.com/pl/default-ldap-group-constrained-team-channel.html?utm_source=mattermost&utm_medium=in-product&utm_content=channel_modes&uid=&sid=&edition=team&server_version="
                  location="channel_modes"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn More
                </a>
              </div>
            </div>
          </div>
          <div
            class="section-separator"
          >
            <hr
              class="separator__hr"
            />
          </div>
        </div>
        <div>
          <div
            class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
          >
            <label
              class="line-switch__label"
            >
              Public channel or private channel
            </label>
            <div
              class="line-switch__toggle"
              data-testid="allow-all-toggle"
            >
              <span
                class="Toggle Toggle--with-state-label"
              >
                <label
                  class="_switch_1hx2q_2 _switch--size-large_1hx2q_126"
                  for="allow-all-toggle"
                >
                  <span
                    class="_switch__track_1hx2q_47"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      class="_switch__input_1hx2q_12"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      role="switch"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      aria-hidden="true"
                      class="_switch__knob_1hx2q_77"
                    />
                  </span>
                </label>
                <span
                  aria-hidden="true"
                  class="Toggle__state-label"
                >
                  Public
                </span>
              </span>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-sm-10"
            >
              <div
                class="help-text-small help-text-no-padding "
              >
                Select Public for a channel any user can find and join. 
                <br />
                Select Private to require channel invitations to join. 
                <br />
                Use this switch to change this channel from public to private or from private to public.
              </div>
            </div>
          </div>
          <div
            class="section-separator"
          >
            <hr
              class="separator__hr"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
